[package]
name = "jarvis-client"
version = "0.0.1"

[[bin]]
name = "health"
path = "src/health.rs"

[[bin]]
name = "keywords"
path = "src/keywords.rs"

[[bin]]
name = "secure"
path = "src/secure.rs"

[[bin]]
name = "offline"
path = "src/offline.rs"

[[bin]]
name = "signal"
path = "src/signals.rs"

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
